--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@prisma/client": "^6.3.0",
     "@tailwindcss/cli": "^4.0.0",
+    "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "canvas": "^3.1.0",
@@ -24,6 +25,7 @@
     "font-awesome": "^4.7.0",
     "jsonwebtoken": "^9.0.2",
     "jspdf": "^2.5.2",
+    "lowdb": "^1.0.0",
     "next": "^14.0.0",
     "next-auth": "^4.24.11",
     "node-fetch": "^3.3.2",
