saved with display errors for ViewAndVoteDialog.js

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.21.2",
     "file-saver": "^2.0.5",
     "font-awesome": "^4.7.0",
+    "jimp": "^1.6.0",
     "jsonwebtoken": "^9.0.2",
     "jspdf": "^2.5.2",
     "lowdb": "^1.0.0",
